add styles for search bar and navigation bar

--- a/src/styles/ui-components/navigation.scss
+++ b/src/styles/ui-components/navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
   background-color: white;
-  border-bottom: 1px solid #ccc;
+  box-shadow: 0 1px 4px 0 rgba(8,19,68,.1);
   padding: .5rem 1rem;
   &__logo {
     height: 2rem;
