--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
 // ui-components in styles
 @import './ui-components/navigation.scss';
 @import './ui-components/search-bar.scss';
+
+
+body {
+    background: rgba(229, 200, 247, 0.2);
+}
