--- a/src/styles/ui-components/search-bar.scss
+++ b/src/styles/ui-components/search-bar.scss
@@ -1,12 +1,30 @@
 .search {
   text-align: center;
   padding: 2rem;
-
   &__form {
 
-    input {
-      padding: .25rem 1.5rem;
-      margin: 0 .5rem;
+    input[type="text"] {
+      width: 30%;
+      padding: .75rem 1.5rem;
+      border-radius: 100px;
+      border: 1px solid rgba(204, 204, 204, .22);
+      outline: none;
+      box-shadow: 0 1px 4px 0 rgba(8,19,68,.1);
+
+    }
+
+    button[type="submit"] {
+      padding: .75rem;
+      margin-left: .5rem;
+      border-radius: 50%;
+      background-color: white;
+      border: 1px solid rgba(204, 204, 204, .22);
+      box-shadow: 0 1px 4px 0 rgba(8,19,68,.1);
+      cursor: pointer;
+      outline: none;
+      i {
+        color: #086554;
+      }
     }
   }
 }
