add bootstrap and fontawesome icons

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 // ui-components in styles
 @import './ui-components/navigation.scss';
 @import './ui-components/search-bar.scss';
-
+@import './ui-components/card.scss';
 
 body {
     background: rgba(229, 200, 247, 0.2);
