--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,17 @@
 @import './ui-components/navigation.scss';
 @import './ui-components/search-bar.scss';
 @import './ui-components/card.scss';
+@import './ui-components/single-drink.scss';
 
-body {
-    background: rgba(229, 200, 247, 0.2);
-}
 
 h3 {
-    font-weight: 400;
+    font-weight: bolder;
+    color: #014f56;
     margin-bottom: 2rem;
+  }
+
+//   sections
+
+  .trending-recipes {
+      background-color: honeydew;
   }
