--- a/src/styles/ui-components/card.scss
+++ b/src/styles/ui-components/card.scss
@@ -3,16 +3,14 @@
     margin-right: 1rem;
     border: none;
 
-    &__thumbnail {}
-
-    &--like {
-        font-size: 1.4rem;
-        color: white;
-        position: absolute;
-        right: 0;
-        margin: .5rem;
-        cursor: pointer;
-    }
+   &__heart {
+       position: absolute;
+       right: 0;
+       margin: .5rem;
+       svg {
+           fill: red;
+       }
+   }
 
     &__content {
         padding: .75rem;
@@ -27,7 +25,6 @@
             }
         }
 
-        &--paragraph {}
     }
 
 }
